--- a/src/pages/agregarItem/styles.agregarItem.css
+++ b/src/pages/agregarItem/styles.agregarItem.css
@@ -14,10 +14,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Protest Revolution", sans-serif;
 }
 
 body {
-    font-family: "Protest Revolution", sans-serif;
     font-size: 20px;
     background-color: var(--background-color);
     color: var(--text-color);
@@ -61,4 +61,159 @@ body {
 .main-content {
     flex: 1;
     padding: 20px;
+    margin:30px 40px 0px 40px;
+}
+
+.add-items{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    padding: 10px;
+    justify-content: right;
+}
+
+.add-items-button{
+    width: 150px;
+    height: 40px;
+    color: white;
+    background-color: #284B63;
+    border-radius: 10px ;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.add-items-button:hover{
+    background-color: #3C6E71;
+}
+
+.buttons{
+    height: 27px;
+    width: 27px;
+    flex: 1 1;
+    background-color: transparent;
+    border: none;
+    float: right;
+}
+
+.tables {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+.table-container {
+    background-color: var(--card-color);
+    padding: 50px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.table-container h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.table-container h3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+    font-size: 15px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f8f9fa;
+    font-weight: bold;
+}
+/* Formulario*/
+.modal {
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background:white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 70%;
+    min-height: 400px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.close-btn {
+    float: right;
+    font-size: 40px;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+}
+
+.close-btn:hover {
+    color: darkred;
+}
+form{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    margin: 20px 10px;
+}
+form label{
+    font-size: 25px;
+    justify-content: space-between;
+    align-items: center;
+    padding:10px 28px 10px 28px;
+    margin-top: 20px;
+    display: inline-block;
+}
+form input{
+    width: 250px;
+    height: 40px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 20px;
+    display: inline-block;
+    
+}
+.btn-guardar{
+    width: 150px;
+    height: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5%;
+    margin-left: 85%;
+    color: white;
+    background-color: #284B63;
+    border-radius: 10px ;
+    border: none;
+    font-size: 15px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
