--- a/src/pages/ayuda/styles.ayuda.css
+++ b/src/pages/ayuda/styles.ayuda.css
@@ -22,6 +22,14 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
 }
+h1{
+    font-size: 40px;
+    margin-bottom: -20px;
+}
+p{
+    font-size: 20px;
+    align-items: center;
+}
 
 .container {
     display: flex;
@@ -61,4 +69,15 @@ body {
 .main-content {
     flex: 1;
     padding: 20px;
+}
+.content-help{
+    width: 100%;
+    height: 45%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 10px 30px 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
