--- a/src/pages/ayuda/styles.ayuda.css
+++ b/src/pages/ayuda/styles.ayuda.css
@@ -61,6 +61,9 @@ p{
     border-radius: 5px;
     transition: background-color 0.3s;
 }
+.sidebar nav a:hover{
+    background-color: #3498db;
+}
 
 .sidebar nav a i {
     margin-right: 10px;
