--- a/src/pages/configuracion/styles.configuracion.css
+++ b/src/pages/configuracion/styles.configuracion.css
@@ -53,6 +53,9 @@ body {
     border-radius: 5px;
     transition: background-color 0.3s;
 }
+.sidebar nav a:hover{
+    background-color: #3498db;
+}
 
 
 .sidebar nav a i {
