--- a/src/pages/agregarItem/styles.agregarItem.css
+++ b/src/pages/agregarItem/styles.agregarItem.css
@@ -162,12 +162,18 @@ th {
     border-radius: 10px;
     width: 70%;
     min-height: 400px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    justify-content: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .close-btn {
     float: right;
+    display: flex;
+    align-items: center;
+    justify-content: right;
     font-size: 40px;
     cursor: pointer;
     color: rgb(0, 0, 0);
@@ -197,7 +203,6 @@ form input{
     text-align: center;
     border-radius: 10px;
     margin-top: 20px;
-    display: inline-block;
     
 }
 .btn-guardar{
